# geemap-tools

./: .gitattributes  .gitignore  CITATION.cff  DEVELOPMENT.md  Exemplo_geemap_tools_[COLAB_version].ipynb  README-en.md  README.md  TODO.md  USAGE.md  environment.yml  generate_manual.py  manual.md  pyproject.toml  setup.py
.ipynb_checkpoints/: LICENSE-checkpoint  __init__-checkpoint.py  example_geemap-tools-checkpoint.ipynb  setup-checkpoint.py
dev/: Como extrair informações de bandas.ipynb
exemplos/: 00_Exemplo_geemap_tools_[COLAB_version].ipynb  01_Exemplo_Terra_Climate_Tijuca.ipynb  02_Exemplo_CHIRPS_Tijuca.ipynb  03_Exemplo_extract_mapbiomas.ipynb  04_Exemplo_SIDRA_Tres_Pontas.ipynb  Exemplo_CHIRPS_Tijuca.ipynb  Exemplo_SIDRA_Tres_Pontas.ipynb  Exemplo_Terra_Climate_Tijuca.ipynb  Exemplo_geemap_tools_[COLAB_version].ipynb  Floresta_da_Tijuca.dbf  Floresta_da_Tijuca.shp  Floresta_da_Tijuca.shx  README_international_users.md
geemap_tools/: Exemplo_geemap_tools.ipynb  __init__.py  analysis.py  catalog.py  clouds.py  gee_utils.py  io.py  sidra_tools.py
private_dev/: Como extrair informações de bandas.ipynb  generate_manual.py
